Rework .desktop files verification: Always verify .desktop files are installed in the system folder on package install and uninstalled on package uninstall. Always verify contents of .desktop files.